--- a/examples/webgl_demo/templates/index.html
+++ b/examples/webgl_demo/templates/index.html
@@ -116,7 +116,7 @@
               );
             }
           },
-          {  name: 'Bunny',
+          {  name: 'Human Head',
             load: function(model) {
               stlLoader.load(
                 '{{ url_for('static', filename='v17_head.stl') }}',
